--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,10 @@
 
 body {
 	/*background-image: url("../img/bg/wang_bckgrnd_001.jpg");*/
-	background-repeat: no-repeat;
+/*	background-repeat: no-repeat;
 	background-size: cover;
-	background-attachment: fixed;
+	background-attachment: fixed;*/
+	background-color: #ffff00;
 	overflow-x: hidden;
 	overflow-y: scroll;
 	margin: 0px;
